fixed images stretching and added city selection in search

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -57,3 +57,6 @@ textarea {
 	background-color: lightgray;
 	cursor: pointer;
 }
+.image-cover {
+	object-fit: cover;
+}
